[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/GridMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/FX/puzzle_solved.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Fonts/dead_hammer_24.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/VictoryParticle.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Hand.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/GameLevel.gd" type="Script" id=7]
[ext_resource path="res://Scripts/LevelManager.gd" type="Script" id=8]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridMap" parent="." instance=ExtResource( 1 )]
position = Vector2( 162, 162 )

[node name="VictoryParticle" parent="GridMap" instance=ExtResource( 5 )]
scale = Vector2( 2, 2 )

[node name="Hand" parent="." instance=ExtResource( 6 )]
position = Vector2( 450, 815 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.026
anchor_right = 0.5
anchor_bottom = 0.026
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 4 )
text = "leave just ONe"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameLevel" type="Node" parent="."]
script = ExtResource( 7 )
hand_path = NodePath("../Hand")
fx_win_path = NodePath("../FXwin")

[node name="Button" type="Button" parent="GameLevel"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelManager" type="Node" parent="."]
script = ExtResource( 8 )

[node name="FXwin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 7.595

[connection signal="next_level" from="GameLevel" to="." method="_on_GameLevel_next_level"]
[connection signal="won" from="GameLevel" to="." method="_on_GameLevel_won"]
[connection signal="won" from="LevelManager" to="." method="update_level_text"]
